--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
      "jest": true
   },
   "rules": {
+    "no-new": "off",
+    "max-classes-per-file": ["error", 10],
     "no-restricted-syntax": [
       "error",
       "LabeledStatement",
